# lgspkctl

./: .gitmodules  CMakeLists.txt  LICENSE  config.h.cmake  lgspkctl.project  lgspkctl.workspace  readme.md
src/: CMakeLists.txt  lgspkctl.c  lgspkctl.h
